# rustfuscator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WHITEPAPER.md  obfuscation_fundamentals.html
benches/: macro_overhead.rs
examples/: advanced_macro_usage.rs  basic_usage_1.rs  basic_usage_10.rs  basic_usage_2.rs  basic_usage_3.rs  basic_usage_4.rs  basic_usage_5.rs  basic_usage_6.rs  basic_usage_7.rs  basic_usage_8.rs  basic_usage_9.rs
obfuscator_cli/: Cargo.toml  cargo.toml
obfuscator_cli/src/: cli.rs  config.rs  file_filter.rs  file_io.rs  main.rs  processor.rs  project_mode.rs  utils.rs
obfuscator_derive/: Cargo.toml  README.md
obfuscator_derive/src/: lib.rs
rust_code_obfuscator/: Cargo.toml
rust_code_obfuscator/src/: crypto.rs
rust_code_obfuscator_core/: Cargo.toml  README.md
rust_code_obfuscator_core/src/: build.rs  crypto.rs  errors.rs  lib.rs  obfstr.rs  obfuscator.rs  utils.rs
src/: lib.rs  obfuscator.rs  utils.rs
tests/: derive_scalars.rs  obfuscate_num.rs
