[package]
name = "rust_code_obfuscator"
version = "0.2.8"
edition = "2021"
license = "MIT"
description = "A Rust library to easily obfuscate strings and control-flow using cryptify lib"
repository = "https://github.com/GianIac/rustfuscator"
keywords = ["obfuscation", "macros", "cli", "security", "rust-tools"]
categories = ["development-tools", "command-line-utilities", "cryptography"]

[lib]
name = "rust_code_obfuscator"
path = "src/lib.rs"

[workspace]
members = [
    "obfuscator_cli",
    "obfuscator_derive",
    "rust_code_obfuscator_core"
]

[dependencies]
cryptify = "3.1.1"
rand = "0.9.2"
aes-gcm = "0.10"
aes = "0.8"
aead = "0.5"

rust_code_obfuscator_core = "0.2.5"
obfuscator_derive = "0.2.5"
