[package]
name = "obfuscator_derive"
version = "0.2.4"
edition = "2021"
description = "Derive macro for struct-level encryption used in rustfuscator"
license = "MIT"
repository = "https://github.com/GianIac/rustfuscator"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
aes-gcm = "0.10"
rand = "0.9.1"
generic-array = "1.2.0"
