[package]
name = "rust_code_obfuscator_core"
version = "0.2.5"
edition = "2021"
description = "Core encryption and obfuscation logic for rustfuscator"
license = "MIT"
repository = "https://github.com/GianIac/rustfuscator"

[dependencies]
cryptify = "3.1.1"
rand = "0.8"
aes-gcm = "0.10"
aes = "0.8"
aead = "0.5"
